--- a/World Tour/html/about.html
+++ b/World Tour/html/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document2</title>
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="../css/about.css">
     <script src="https://kit.fontawesome.com/8141131ca8.js" crossorigin="anonymous"></script>
 </head>
 <body>
